# serde_amp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-check.yml
src/: de.rs  error.rs  lib.rs  ser.rs
